--- a/src/styles.css
+++ b/src/styles.css
@@ -38,6 +38,7 @@
           backdrop-filter: blur(2px);
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
+  z-index: 1;
 }
 
 .nav .navLogo {
@@ -193,15 +194,18 @@
   width: 25%;
   background-color: #323232;
   border: none;
-  color: #ffffff;
   margin-left: 22px;
   margin-top: 20px;
+  color: #ffffff;
+  text-decoration: none;
+  text-align: center;
+  padding-top: 10px;
   cursor: pointer;
 }
 
 .aboutMe .imgContainer {
   width: 33.33%;
-  background-image: url("/public/assets/images/4a.png");
+  background-image: url("/public/assets/images/profile.png");
   background-position: center;
   background-size: cover;
 }
@@ -259,6 +263,65 @@
 
 .projectsContainer h2 {
   margin-left: 10.66%;
+  margin-bottom: 30px;
+}
+
+.cardsContainer {
+  width: 100%;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.cards {
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.cards img {
+  height: 45vh;
+}
+
+.cards img:hover {
+  -webkit-filter: blur(2px);
+          filter: blur(2px);
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+
+.projectView {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.projectView img {
+  height: 130vh;
+  width: 130vh;
+  position: absolute;
+  height: auto;
 }
 
 .contactSection {
