--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,6 +33,7 @@ $white: #ffffff;
     font-size: 18px;
     backdrop-filter: blur(2px);
     transition: all 0.5s;
+    z-index: 1;
 
     .navLogo {
         width: 45%;
@@ -153,16 +154,20 @@ $white: #ffffff;
             width: 25%;
             background-color: $grey;
             border: none;
-            color: $white;
             margin-left: 22px;
             margin-top: 20px;
+            color: $white;
+            text-decoration: none;
+            text-align: center;
+            padding-top: 10px;
             cursor: pointer;
+
         }
     }
 
     .imgContainer {
         width: 33.33%;
-        background-image: url('/public/assets/images/4a.png');
+        background-image: url('/public/assets/images/profile.png');
         background-position: center;
         background-size: cover;
     }
@@ -206,8 +211,56 @@ $white: #ffffff;
     h2 {
         @extend .sectionTitle;
         margin-left: 10.66%;
+        margin-bottom: 30px;
     }
 }
+
+//-----------------
+
+.cardsContainer {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+//-----------------
+
+.cards {
+    overflow: hidden;
+    cursor: pointer;
+
+    img {
+        height: 45vh;
+    }
+
+    img:hover {
+        filter: blur(2px);
+        transform: scale(1.1);
+        transition: all 0.5s ease-in-out;
+    }
+}
+
+.projectView {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    img {
+        height: 130vh;
+        width: 130vh;
+        position: absolute;
+        height: auto;
+    }
+}
+
+//-----------------
 
 .contactSection {
     padding-top: 120px;
