--- a/src/styles.scss
+++ b/src/styles.scss
@@ -133,6 +133,18 @@ $white: #ffffff;
 
 // -------------------------
 
+.sectionTitle {
+    width: 84.34%;
+    text-transform: uppercase;
+    border-left: 4px solid $borderGreen;
+    font-size: 40px;
+    padding-left: 22px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+// -------------------------
+
 .aboutMe {
     height: auto;
     padding: 120px 0px;
@@ -188,18 +200,9 @@ $white: #ffffff;
         width: 33.33%;
         background-image: url('/public/assets/images/profile.png');
         background-position: center;
-        background-size: cover;
+        background-size: contain;
+        background-repeat: no-repeat;
     }
-}
-
-.sectionTitle {
-    width: 84.34%;
-    text-transform: uppercase;
-    border-left: 4px solid $borderGreen;
-    font-size: 40px;
-    padding-left: 22px;
-    padding-top: 10px;
-    padding-bottom: 10px;
 }
 
 .skillsContainer {
@@ -223,8 +226,7 @@ $white: #ffffff;
 
 //-----------------
 
-.projectsContainer {
-
+.featuredWork {
     padding-top: 120px;
 
     h2 {
@@ -234,8 +236,6 @@ $white: #ffffff;
     }
 }
 
-//-----------------
-
 .cardsContainer {
     width: 100%;
     height: auto;
@@ -243,50 +243,255 @@ $white: #ffffff;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
+
+    .cards {
+        overflow: hidden;
+        cursor: pointer;
+    
+        img {
+            height: 41vh;
+            margin: 0px 2px;
+        }
+    
+        img:hover {
+            filter: blur(2px);
+            transform: scale(1.1);
+            transition: all 0.5s ease-in-out;
+        }
+    }
 }
+
+// .projectView {
+//     width: 100%;
+//     height: 100%;
+//     background-color: rgba(0, 0, 0, 0.6);
+//     position: absolute;
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+
+//     img {
+//         height: 130vh;
+//         width: 130vh;
+//         position: absolute;
+//         height: auto;
+//     }
+// }
 
 //-----------------
 
-.cards {
-    overflow: hidden;
-    cursor: pointer;
-
-    img {
-        height: 41vh;
-        margin: 0px 2px;
-    }
-
-    img:hover {
-        filter: blur(2px);
-        transform: scale(1.1);
-        transition: all 0.5s ease-in-out;
-    }
-}
-
-.projectView {
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.6);
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    img {
-        height: 130vh;
-        width: 130vh;
-        position: absolute;
-        height: auto;
-    }
-}
-
-//-----------------
-
-.contactSection {
+.contactMe {
     padding-top: 120px;
+    padding-bottom: 8vh;
 
-    h2 {
-        @extend .sectionTitle;
-        margin-left: 10.66%;
+    .contactContainer {
+        width: 100%;
+        padding-left: 10.66%;
+        
+        h2 {
+            @extend .sectionTitle;
+        }
+
+        div {
+            width: 100%;
+            display: flex;
+
+            .contactDetails {
+                width: 45%;
+                height: 17vh;
+                padding-left: 22px;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-evenly;
+    
+                p {
+                    font-family: GillSansMedium;
+                    font-size: 20px;
+    
+                    .emailLabel {
+                        font-weight: bold;
+                    }
+    
+                    .emailAddress {
+                        text-decoration: underline;
+                    }
+                }
+            }
+    
+            .contactLocation {
+                width: 55%;
+                height: auto;
+    
+                iframe {
+                    border: 0;
+                }
+            }
+        }
+
     }
+}
+
+//----------------- Media Queries iPhone 12 PRO
+
+@media only screen and (max-width: 390px) {
+
+    .nav {
+        width: 100%;
+        justify-content: center;
+
+        .navLinks {
+            width: 80%;
+            justify-content: space-around;
+        }
+    }
+    
+    //-----------------
+
+    .titleContainer {
+    
+        h1 {
+            width: 80%;
+            font-size: 50px;
+        }
+    
+        p {
+            width: 60%;
+        }
+    }
+
+    //-----------------
+
+    .sectionTitle {
+        font-size: 30px;
+    }
+
+    //-----------------
+
+    .aboutMe {
+        height: auto;
+        padding: 80px 0px;
+        justify-content: center;
+    
+        .detailContainer {
+    
+            width: 90%;
+            padding-left: 0;
+    
+            .aboutInfo {
+                width: 100%;
+                height: auto;
+            }
+    
+            .btn {
+                width: 45%;
+                padding: 1.8vh 0vh;
+    
+            }
+        }
+    }
+
+    //-----------------
+
+    .skillsContainer {
+        height: 30vh;
+        justify-content: space-around;
+    }
+
+    //-----------------
+
+    .featuredWork {
+        width: 100%;
+        padding-top: 80px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        .projectsContainer {
+            width: 90%;
+
+            h2 {
+                margin-left: 0px;
+            }
+
+            .cardsContainer {
+                width: 100%;
+                flex-direction: column;
+                align-items: center;
+
+                .cards {
+                    margin: 7px 0px;
+                
+                    img {
+                        height: 28vh;
+                        border-radius: 15px;
+                    }
+                
+                    img:hover {
+                        filter: none;
+                        transform: none;
+                        transition: none;
+                    }
+                }
+            }
+        }
+    }
+
+    //-----------------
+
+    .contactMe {
+        height: auto;
+        width: 100%;
+        padding-top: 73px;
+        padding-bottom: 8vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    
+        .contactContainer {
+            width: 90%;
+            padding-left: 0;
+    
+            div {
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+    
+                .contactDetails {
+                    width: 100%;
+                    height: 17vh;
+                    padding-left: 22px;
+        
+                    p {
+                        font-family: GillSansMedium;
+                        font-size: 20px;
+        
+                        .emailLabel {
+                            font-weight: bold;
+                        }
+        
+                        .emailAddress {
+                            text-decoration: underline;
+                        }
+                    }
+
+                    div {
+                        display: flex;
+                        flex-direction: row;
+                    }
+                }
+        
+                .contactLocation {
+                    width: auto;
+                    height: auto;
+        
+                    iframe {
+                        width: 100%;
+                        border-radius: 15px;
+                    }
+                }
+            }
+    
+        }
+    }
+
 }
